--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AboutUs"></activity>
+        <activity android:name=".Retrive"></activity>
+        <activity android:name=".AboutDairyCattle" />
+        <activity android:name=".AboutUs" />
+        <activity android:name=".NewPage" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Home" />
         <activity android:name=".Register" />
-        <activity android:name=".NewPage">
+        <activity android:name=".View_Farm">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
