--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AboutUs"></activity>
-        <activity android:name=".AboutDairyCattle" />
+        <activity android:name=".ViewFarms"></activity>
+        <activity android:name=".addFarm" />
         <activity android:name=".View_Farm" />
         <activity android:name=".NewPage" />
         <activity android:name=".Retrive" />
