--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".addCattle"></activity>
+        <activity android:name=".CattleHome"></activity>
+        <activity android:name=".AddVaccine" />
+        <activity android:name=".ViewVaccination" />
+        <activity android:name=".addCattle" />
         <activity android:name=".ViewCattles" />
         <activity android:name=".ViewFarms" />
         <activity android:name=".addFarm" />
