--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CattleHome"></activity>
+        <activity android:name=".AddBreeding"></activity>
+        <activity android:name=".ViewBreeding" />
+        <activity android:name=".AddDisease" />
+        <activity android:name=".ViewDisease" />
+        <activity android:name=".CattleHome" />
         <activity android:name=".AddVaccine" />
         <activity android:name=".ViewVaccination" />
         <activity android:name=".addCattle" />
