--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddBreeding"></activity>
+        <activity android:name=".ViewInfo"></activity>
+        <activity android:name=".AddBreeding" />
         <activity android:name=".ViewBreeding" />
         <activity android:name=".AddDisease" />
         <activity android:name=".ViewDisease" />
